RESOLVED FIXED 259383
Regression(265678@main) Unable to send a MessagePort to an AudioWorklet
https://bugs.webkit.org/show_bug.cgi?id=259383
Summary Regression(265678@main) Unable to send a MessagePort to an AudioWorklet
Chris Dumez
Reported 2023-07-20 19:15:06 PDT
We are unable to send a MessagePort to an AudioWorklet since 265678@main. This is breaking the following experiment: - https://artsandculture.google.com/experiment/viola-the-bird/nAEJVwNkp-FnrQ
Attachments
Chris Dumez
Comment 1 2023-07-20 19:15:14 PDT
Chris Dumez
Comment 2 2023-07-20 19:19:34 PDT
EWS
Comment 3 2023-07-20 21:15:02 PDT
Committed 266197@main (2511c07012f5): <https://commits.webkit.org/266197@main> Reviewed commits have been landed. Closing PR #15966 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.